--- a/TKSolution/TKSolution.API/appsettings.Development.json
+++ b/TKSolution/TKSolution.API/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "TKSolution": "Server=18.224.181.173;initial catalog=TKSolution;user id=tk; password=tk@123"
+    "TKSolution": "Server=18.224.181.173;initial catalog=TKSolution;user id=XXXXX; password=XXXXXX"
   }
 }
